--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 	},
 	"scripts": {
 		"start": "node app/app.js",
-		"ngrok": "ngrok start -config ~/.ngrok2/ngrok.yml -config ngrok.yml gs",
+		"ngrok": "../ngrok start -config ~/.ngrok2/ngrok.yml -config ngrok.yml gs",
 		"relock": "rm -rf node_modules/ package-lock.json && npm install && { npm outdated || true; }"
 	},
 	"engines": {
@@ -25,6 +25,7 @@
 		"bluebird": "3.x",
 		"chalk": "2.x",
 		"debug": "4.x",
+		"dotenv": "^10.0.0",
 		"lodash": "4.x",
 		"request": "2.x",
 		"request-promise": "4.x",
